<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.yandex.realty.vos2</groupId>
    <artifactId>vos2-realty-tests</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Root</name>

    <modules>
        <module>vos2-api-client</module>
        <module>vos2-api-tests</module>
    </modules>

    <scm>
        <url>https://github.yandex-team.ru/YandexClassifieds/vos2-realty-tests</url>
        <connection>scm:git:git://github.yandex-team.ru/YandexClassifieds/vos2-realty-tests.git</connection>
    </scm>

    <issueManagement>
        <system>StarTrek</system>
        <url>https://st.yandex-team.ru/VERTISTEST</url>
    </issueManagement>

    <ciManagement>
        <system>TeamCity</system>
        <url>https://teamcity.yandex-team.ru</url>
    </ciManagement>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <allure.version>2.9.0</allure.version>
        <aspectj.version>1.9.1</aspectj.version>
        <freemarker.version>2.3.26-incubating</freemarker.version>
        <gson.version>2.7</gson.version>
        <guice.version>4.1.0</guice.version>
        <hamcrest.version>1.3</hamcrest.version>
        <junit.version>4.12</junit.version>
        <restassured.version>3.1.0</restassured.version>
        <junit.dataprovider.version>1.11.0</junit.dataprovider.version>
        <log4j.version>1.2.17</log4j.version>
        <restassured.logger.version>1.5-SNAPSHOT</restassured.logger.version>
        <passport.version>1.4-SNAPSHOT</passport.version>
        <jackson-version>2.9.2</jackson-version>
        <!--default-->
        <parallel.strategy>classes</parallel.strategy>
        <thread.count>1</thread.count>
        <fork.count>1</fork.count>
        <default.package>ru.auto.tests.realty.vos2</default.package>
        <swagger-core-version>1.5.15</swagger-core-version>
        <gson-fire-version>1.8.2</gson-fire-version>
        <okio-version>1.13.0</okio-version>
        <commons.lang>2.4</commons.lang>
        <commons.version>1.2-SNAPSHOT</commons.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ru.yandex.realty</groupId>
                <artifactId>vos2-api-client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!--Commons -->
            <dependency>
                <groupId>ru.vertis.tests</groupId>
                <artifactId>commons</artifactId>
                <version>${commons.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.vertis.tests</groupId>
                <artifactId>commons-ra</artifactId>
                <version>${commons.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.vertis.tests</groupId>
                <artifactId>jsonunit-allure</artifactId>
                <version>${commons.version}</version>
            </dependency>
            <!-- Allure -->
            <dependency>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-junit4</artifactId>
                <version>${allure.version}</version>
            </dependency>
            <!--HACK: for local run-->
            <dependency>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-junit4-aspect</artifactId>
                <version>2.0-BETA15</version>
            </dependency>
            <dependency>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-assertj</artifactId>
                <version>${allure.version}</version>
            </dependency>
            <!-- AspectJ -->
            <dependency>
                <groupId>org.aspectj</groupId>
                <artifactId>aspectjweaver</artifactId>
                <version>${aspectj.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.yandex.realty</groupId>
                <artifactId>passport-api-client</artifactId>
                <version>${commons.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tngtech.java</groupId>
                <artifactId>junit-dataprovider</artifactId>
                <version>${junit.dataprovider.version}</version>
            </dependency>
            <dependency>
                <groupId>io.rest-assured</groupId>
                <artifactId>rest-assured</artifactId>
                <version>${restassured.version}</version>
            </dependency>
            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.freemarker</groupId>
                <artifactId>freemarker</artifactId>
                <version>${freemarker.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.inject</groupId>
                <artifactId>guice</artifactId>
                <version>${guice.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.inject.extensions</groupId>
                <artifactId>guice-multibindings</artifactId>
                <version>${guice.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-all</artifactId>
                <version>${hamcrest.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.aeonbits.owner</groupId>
                <artifactId>owner-java8</artifactId>
                <version>1.0.9</version>
            </dependency>
            <dependency>
                <groupId>commons-httpclient</groupId>
                <artifactId>commons-httpclient</artifactId>
                <version>3.1</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.22</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>3.6.2</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.assertj/assertj-assertions-generator-maven-plugin -->
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-assertions-generator-maven-plugin</artifactId>
                <version>2.0.0</version>
            </dependency>
            <!--https://github.com/awaitility/awaitility-->
            <dependency>
                <groupId>org.awaitility</groupId>
                <artifactId>awaitility</artifactId>
                <version>3.0.0</version>
            </dependency>
            <dependency>
                <groupId>ru.vertis.tests</groupId>
                <artifactId>guice-junit</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>ru.vertis.tests</groupId>
                <artifactId>passport-yandex</artifactId>
                <version>${commons.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-api</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-log4j12</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-simple</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>log4j-over-slf4j</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>jcl-over-slf4j</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>jul-to-slf4j</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <!--jackson-->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson-version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson-version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson-version}</version>
            </dependency>
            <dependency>
                <groupId>io.swagger</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>${swagger-core-version}</version>
            </dependency>
            <dependency>
                <groupId>io.gsonfire</groupId>
                <artifactId>gson-fire</artifactId>
                <version>${gson-fire-version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okio</groupId>
                <artifactId>okio</artifactId>
                <version>${okio-version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.benas</groupId>
                <artifactId>random-beans</artifactId>
                <version>3.7.0</version>
            </dependency>
            <dependency>
                <groupId>commons-lang</groupId>
                <artifactId>commons-lang</artifactId>
                <version>${commons.lang}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.findbugs</groupId>
                <artifactId>jsr305</artifactId>
                <version>3.0.2</version>
            </dependency>
        </dependencies>

    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.6</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.19.1</version>
                    <configuration>
                        <argLine>
                            -Xms256m -Xmx6g -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC
                            -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
                        </argLine>
                        <groups>${groups}</groups>
                        <excludedGroups>${excluded.groups}</excludedGroups>
                        <includes>
                            <include>${include.packages}</include>
                        </includes>
                        <excludes>
                            <exclude>${exclude.packages}</exclude>
                        </excludes>
                        <properties>
                            <property>
                                <name>listener</name>
                                <value>io.qameta.allure.junit4.AllureJunit4</value>
                            </property>
                        </properties>
                        <systemProperties>
                            <property>
                                <name>allure.results.directory</name>
                                <value>${project.build.directory}/allure-results</value>
                            </property>
                            <property>
                                <name>allure.link.issue.pattern</name>
                                <value>https://st.yandex-team.ru/{}</value>
                            </property>
                        </systemProperties>
                        <useSystemClassLoader>false</useSystemClassLoader>
                        <parallel>${parallel.strategy}</parallel>
                        <threadCount>${thread.count}</threadCount>
                        <forkCount>${fork.count}</forkCount>
                        <reuseForks>false</reuseForks>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.aspectj</groupId>
                            <artifactId>aspectjweaver</artifactId>
                            <version>${aspectj.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.assertj</groupId>
                    <artifactId>assertj-assertions-generator-maven-plugin</artifactId>
                    <version>2.0.0</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public</url>
        </repository>
    </repositories>
</project>
